# rust-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  maskfile.md  mkdocs.yml  pyproject.toml  versions.json
0.1/: 404.html  index.html
0.1.0/: 404.html  index.html
0.1.0/explanation/aim/: index.html
0.1.0/how-to/dependencies/: index.html
0.1.0/how-to/docs/: index.html
0.1.0/how-to/run-cli/: index.html
0.1.0/how-to/testing/: index.html
0.1.0/how-to/versioning/: index.html
0.1.0/ref/add/: index.html
0.1.0/ref/multiply/: index.html
0.1.0/ref/subtract/: index.html
0.1.0/search/: search_index.json
0.1.0/tutorials/getting-started/: index.html
0.1.1/: 404.html  index.html
0.1.1/explanation/aim/: index.html
0.1.1/how-to/dependencies/: index.html
0.1.1/how-to/docs/: index.html
0.1.1/how-to/run-cli/: index.html
0.1.1/how-to/testing/: index.html
0.1.1/how-to/versioning/: index.html
0.1.1/ref/: index.html
0.1.1/ref/add/: index.html
0.1.1/ref/multiply/: index.html
0.1.1/ref/subtract/: index.html
0.1.1/tutorials/getting-started/: index.html
0.1/explanation/aim/: index.html
0.1/how-to/dependencies/: index.html
0.1/how-to/docs/: index.html
0.1/how-to/run-cli/: index.html
0.1/ref/: index.html
0.1/search/: search_index.json
docs/: README.md
docs/explanation/: aim.md
docs/how-to/: dependencies.md  docs.md  run-cli.md  testing.md  versioning.md
docs/ref/: add.md  index.md  multiply.md  subtract.md
docs/tutorials/: getting-started.md
src/: lib.rs  main.rs
(+6 files in other folders)
