[package]
name = "binnev-rust-template"
version = "0.1.2"
edition = "2024"
description = "A template for new Rust projects with up-to-date tooling"
repository = "https://github.com/binnev/rust-template/"
readme = "README.md"
license = "MIT"
include = ["**/*.rs", "docs/*"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
