# Here we manage the python-based helper tools

[project]
name = "rust-template"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mike>=2.1.3",
    "commitizen>=4.7.2",
    "pre-commit>=4.2.0",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "cargo"
update_changelog_on_bump = true
